--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -4,7 +4,6 @@
 {% load static %}
 {% load custom_filters %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
-
 {% endblock css %}
 {% block content %}
 <!-- Display the user's data after form submission -->
@@ -220,7 +219,7 @@
     {% if jobs %}
     {%for c in jobs%}
     <div class="add_pad">
-      <div class="card " id="card_id_contain" data-job-id = {{c.id}} style="border-radius: 14px;cursor: pointer;" onclick="detail_job()">
+      <div class="card card_id_contain"  data-job-id = {{c.id}} style="border-radius: 14px;cursor: pointer;" >
         <div class="card-body">
           <div class="job_cards mb-2">
             <div class="job_cards">
@@ -249,7 +248,7 @@
           </div>
           <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
             <img width="19px" height="auto" src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Salary_icon.webp" alt="">
-            <span style="color: gray;font-size: 16px;margin-left: 5px;">{{c.salary}}</span>
+            <span style="color: gray;font-size: 16px;margin-left: 5px;"><img src="/media/logos/rupee.png" alt="" width="15">{{c.salary_minimum}}-<img src="/media/logos/rupee.png" alt="" width="15">{{c.salary_maximum}} monthly</span>
           </div>
           <div class="d-flex " style="margin-top: 10px;">
             <!-- <div class="info-card rounded ">{{c.title}}</div> -->
@@ -268,13 +267,8 @@
             {% if c.experience %}
             <div class="info-card rounded ">{{c.experience}}</div>
             {% endif %}
-
-            {% if c.perks %}
-            <div class="info-card rounded ">{{c.perks}}</div>
-            {% endif %}
           </div>
           <p class="card-updated"><small class="text-body-secondary">{{ c.updated_at|custom_timesince }}
-            {{ c.updated_at|  timesince }}
           </small></p>
         </div>
       </div>
@@ -459,12 +453,16 @@
 <script>console.log("{{jobs}}")</script>
 <script src="{% static 'js/home.js'%}"></script>
 <script>
-function detail_job() {
-    const card = document.getElementById('card_id_contain');
-    const id = card.getAttribute('data-job-id');
-    const url = "{% url 'dashboard:job_detail' 0 %}".replace('0', id); // Construct the URL dynamically
-    window.location.href = url;       // Navigate to the URL
-}
+document.querySelectorAll('.card_id_contain').forEach(card => {
+    card.addEventListener('click', function () {
+        const jobId = card.getAttribute('data-job-id'); // Get the job ID
+        if (jobId) {
+            const url = "{% url 'dashboard:job_detail' 0 %}".replace('0', jobId); // Construct the URL
+            window.location.href = url; // Redirect to the URL
+        }
+    });
+});
+
 
 </script>
 {% endblock javascripts %}
