--- a/hatcher_source/templates/dashboard/job_detail.html
+++ b/hatcher_source/templates/dashboard/job_detail.html
@@ -30,10 +30,77 @@
     <button type="submit" class="btn btn-primary">Search</button>
   </form>
 </div>
+{{job.}}
+<div class="main-container ">
+  <div class="container-1">
+    <div class="add_pad" style="margin-bottom: 16px;">
+      <div class="card card_id_contain" style="border-radius: 14px;; border: none;">
+        <div class="card-body">
+          <div class="job_cards mb-2 d-flex justify-content-between">
+            <div class="job_cards d-flex">
+              <img src="/media/{{job.company__image}}" class="cmp_img" width="30px" height="30px"
+                alt="image {{job.id}}">
+              <div class="d-flex flex-column" style="margin-left: 10px;">
+                <span style="line-height: 14px;
+                    font-size: 20px;">
+                  {{job.title}}
+                </span>
+                <span style="color: gray;font-size: 14px;">
+                  {{job.company__name}}
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
+              <img width="19px" height="auto"
+                src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Location_icon.webp" alt="">
+              <span style="color: gray;font-size: 16px;margin-left: 5px;">{{job.location}}</span>
+            </div>
+            <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
+              <img width="19px" height="auto"
+                src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Salary_icon.webp" alt="">
+              <span style="color: gray;font-size: 16px;margin-left: 5px;"><img src="/media/logos/rupee.png" alt=""
+                  width="15">{{job.salary_minimum}}-<img src="/media/logos/rupee.png" alt=""
+                  width="15">{{job.salary_maximum}} monthly</span>
+            </div>
+          </div>
+          <div class="d-flex " style="margin-top: 10px;">
+            <!-- <div class="info-card rounded ">{{job.title}}</div> -->
+            {% if job.req_skill__imp_skill %}
+            <div class="info-card rounded ">{{job.req_skill__imp_skill}}</div>
+            {% endif %}
 
+            {% if job.work_type %}
+            <div class="info-card rounded ">{{job.work_type}}</div>
+            {% endif %}
 
-{{user}}
-{{job}}
+            {% if job.job_type %}
+            <div class="info-card rounded ">{{job.job_type}}</div>
+            {% endif %}
+
+            {% if job.experience %}
+            <div class="info-card rounded ">{{job.experience}}</div>
+            {% endif %}
+
+            {% if job.perks %}
+            <div class="info-card rounded ">{{job.perks}}</div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="detail-description ">
+      <h5>Job Description</h5>
+      <br>
+      {{ job.description|safe }}
+    </div>
+  </div>
+  <div class="container-2">
+    <img src="https://cdn.apna.co/cloudinary/employer-dashboard-images/Logged%20in.png" width="335" alt="" class="">
+  </div>
+</div>
+
 
 
 
