--- a/hatcher_source/templates/dashboard/job_detail.html
+++ b/hatcher_source/templates/dashboard/job_detail.html
@@ -38,14 +38,15 @@
         <div class="card-body">
           <div class="job_cards mb-2 d-flex justify-content-between">
             <div class="job_cards d-flex">
-              <img src="/media/{{job.company__image}}" class="cmp_img" width="30px" height="30px"
-                alt="image {{job.id}}">
+              <img src="/media/company_images/hatcher_tab.png" class="cmp_img" width="50px" height="50px" alt="image 127">
               <div class="d-flex flex-column" style="margin-left: 10px;">
-                <span style="line-height: 14px;
-                    font-size: 20px;">
+                <span style="
+                    line-height: 27px;
+                    font-size: 26px;
+                    ">
                   {{job.title}}
                 </span>
-                <span style="color: gray;font-size: 14px;">
+                <span style="color: gray;font-size: 16px;">
                   {{job.company__name}}
                 </span>
               </div>
