--- a/hatcher_source/static/css/dashboard.css
+++ b/hatcher_source/static/css/dashboard.css
@@ -1,6 +1,7 @@
 body{
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
     background: #c8c6ef36;
+    
 }
 .navbar{
     background-color: #706ce4 ;
