--- a/hatcher_source/static/css/job_detail.css
+++ b/hatcher_source/static/css/job_detail.css
@@ -7,6 +7,7 @@
 .container-1{
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 .detail-description{
     border-radius: .75rem;
