--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -16,21 +16,18 @@
   <form action="{% url 'dashboard:job_search' %}" id="form" method="get" class="d-flex flex-row " style="width: 90%;">
     {{ csrftoken }}
     <select class="form-select" aria-label="Default select example" name="job_type" id="job_type_select" required>
-      <option value="Full Time" selected>Any</option>
-      <option value="Full Time">Full Time</option>
-      <option value="Internship">Internship</option>
-      <option value="Part Time">Part Time</option>
-      <option value="Hourly">Hourly</option>
-      <option value="Hourly">Freelance</option>
+      <option value="Any" {% if search_query.job_type == 'Any' %}selected{% endif %}>Any</option>
+      <option value="Full Time" {% if search_query.job_type == 'Full Time' %}selected{% endif %}>Full Time</option>
+      <option value="Internship" {% if search_query.job_type == 'Internship' %}selected{% endif %}>Internship</option>
+      <option value="Part Time" {% if search_query.job_type == 'Part Time' %}selected{% endif %}>Part Time</option>
+      <option value="Hourly" {% if search_query.job_type == 'Hourly' %}selected{% endif %}>Hourly</option>
+      <option value="Freelance" {% if search_query.job_type == 'Freelance' %}selected{% endif %}>Freelance</option>
     </select>
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
-    <input type="text" placeholder="Enter KeyWord [company/position]" name="keyword" class="form-control" required />
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
-    <input class="form-control " type="text" placeholder="Location [City|Remote]" name="location" required />
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
+    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line" class="align-self-center" />
+    <input type="text" placeholder="Enter KeyWord [company/position]" name="keyword" class="form-control" value="{{ search_query.keyword|default:'' }}" required />
+    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line" class="align-self-center" />
+    <input class="form-control" type="text" placeholder="Location [City|Remote]" name="location" value="{{ search_query.location|default:'' }}" required />
+    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line" class="align-self-center" />
     <button type="submit" class="btn btn-primary">Search</button>
   </form>
 </div>
@@ -250,6 +247,8 @@
           <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
             <img width="19px" height="auto"
               src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Salary_icon.webp" alt="">
+            
+            {% if c.salary_disclose %}
             <span style="color: gray;font-size: 16px;margin-left: 5px;">
               <img src="/media/logos/rupee.png" alt="" width="15" style="
                 margin-right: -3px;
@@ -259,7 +258,11 @@
                 margin-right: -3px;
                 margin-top: -2px;">
                 {{c.salary_maximum}} monthly
-              </span>
+            </span>
+            {% endif %}
+            <span style="color: gray;font-size: 16px;margin-left: 5px;">
+              Not-Disclose
+            </span>
           </div>
           <div class="d-flex " style="margin-top: 10px;">
             <!-- <div class="info-card rounded ">{{c.title}}</div> -->
