bug in city suggestion div in dashboar home

--- a/hatcher_source/static/css/home.css
+++ b/hatcher_source/static/css/home.css
@@ -85,7 +85,7 @@
 .autocomplete-item{
     font-size: larger;
     padding: 5px;
-    border-bottom: 2px solid #0000004f;
+    /* border-bottom: 2px solid #0000004f; */
 }
 .autocomplete-item:hover {
     background: #8080802e;
