Slider with it value Fixed

--- a/hatcher_source/static/css/dashboard.css
+++ b/hatcher_source/static/css/dashboard.css
@@ -55,7 +55,7 @@ body{
     border-radius: 23px;
     margin-bottom: 40px;
     padding: 20px 50px;
-    /* width: 50%; */
+    width: 75%;
 }
 
 #Up_Arrow{
