--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -71,14 +71,11 @@ Showing {{jobs|length}} jobs based on your filter
           <p>(1)</p>
         </div>
       </div>
-      <p style="cursor: pointer;font-size: 14px;color: green;font-weight: bold;">Clear all</p>
+      <p style="cursor: pointer;font-size: 14px;color: green;font-weight: bold;" id="clear_all" >Clear all</p>
     </div>
-    <div id="all-applied-filter" class="d-flex flex-row justify-content-between">
-      <div class="applied-filter">
-        <span style=" margin-right: 6px;margin-left: 3px;">Last 24 hours</span>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path fill="#003C96" d="M13.097 2.912a.806.806 0 00-1.141 0L8 6.86 4.044 2.904a.806.806 0 10-1.14 1.14L6.858 8l-3.956 3.956a.806.806 0 101.141 1.141L8 9.141l3.956 3.956a.806.806 0 101.14-1.14L9.142 8l3.956-3.956a.81.81 0 000-1.132z"></path></svg>
-      </div>
+    <div id="all-applied-filter" >
     </div>
+
     <!-- Filter Section -->
     <div>
 
@@ -177,11 +174,11 @@ Showing {{jobs|length}} jobs based on your filter
         
         <div >
         <span id="experience_value_0" class="exp_val visually-hidden" style="width: fit-content;">Fresher</span>
-        <span id="experience_value_1" class="exp_val visually-hidden" style="width: fit-content;">1</span>
-        <span id="experience_value_2" class="exp_val visually-hidden" style="width: fit-content;">1-3</span>
-        <span id="experience_value_3" class="exp_val visually-hidden" style="width: fit-content;">3-6</span>
-        <span id="experience_value_4" class="exp_val visually-hidden" style="width: fit-content;">6-10</span>
-        <span id="experience_value_5" class="exp_val visually-hidden" style="width: fit-content;">10+</span> 
+        <span id="experience_value_1" class="exp_val visually-hidden" style="width: fit-content;">1 year</span>
+        <span id="experience_value_2" class="exp_val visually-hidden" style="width: fit-content;">1-3 years</span>
+        <span id="experience_value_3" class="exp_val visually-hidden" style="width: fit-content;">3-6 years</span>
+        <span id="experience_value_4" class="exp_val visually-hidden" style="width: fit-content;">6-10 years</span>
+        <span id="experience_value_5" class="exp_val visually-hidden" style="width: fit-content;">10+ years</span> 
         <span id="experience_value_6" class="exp_val visually-hidden" style="width: fit-content;">Any</span> 
         </div>  
         <input type="range" name="experience" id="experience_slider" 
@@ -193,7 +190,7 @@ Showing {{jobs|length}} jobs based on your filter
         ">
         <div>0 years</div> 
         <div>10+ years</div>
-      </div>]
+      </div>
 
       </div>
       
@@ -535,7 +532,8 @@ Showing {{jobs|length}} jobs based on your filter
 {% block javascripts %}
 {% load static %}
 <script>console.log("{{jobs}}")</script>
-<script src="{% static 'js/home.js'%}"></script>
+<script src="{% static 'js/home_func.js'%}"  type="module"></script>
+<script src="{% static 'js/home.js'%}" type="module"></script>
 <script>
   document.querySelectorAll('.card_id_contain').forEach(card => {
     card.addEventListener('click', function () {
@@ -594,55 +592,13 @@ Showing {{jobs|length}} jobs based on your filter
 </script>
 <script>
   // Predefined experience values
-  const experienceOptions = ["Fresher", "1 year", "1-3 years", "3-6 years", "6-10 years", "10+ years"];
-
-  // Get the slider element
-  const slider = document.getElementById("experience_slider");
-
-
-  // Get the selected experience value from the template
   const value = "{{ search_query.experience | default:'Fresher' }}";
-
-  // Find the corresponding index
+  const experienceOptions = ["Fresher", "1 year", "1-3 years", "3-6 years", "6-10 years", "10+ years"];
+  const slider = document.getElementById("experience_slider");
   console.log(value)
   const index = experienceOptions.indexOf(value.toString());
   console.log(index)
-  // Debug: Alert the experience value and index
-
-  id = "experience_value_"+index
-  console.log(id)
-  const experience_value = document.getElementById(id)
-  // Set the slider to the corresponding index if valid
-  if (index !== -1) {
-    slider.value = index;
-    experience_value.classList.remove('visually-hidden')
-  } else {
-    alert("Invalid experience value. Resetting to default.");
-    slider.value = 0; // Reset to default (Fresher)
-  }
-
-  const spans = document.querySelectorAll(".exp_val");
-
-  // Function to update visible span
-    function updateExperienceLabel(value) {
-        spans.forEach((span, index) => {
-            if (index == value) {
-                span.classList.remove("visually-hidden"); // Show the selected span
-            } else {
-                span.classList.add("visually-hidden"); // Hide other spans
-            }
-        });
-    }
-
-    // Initialize on page load
-    updateExperienceLabel(slider.value);
-
-    // Add event listener to slider
-    slider.addEventListener("input", function () {
-        updateExperienceLabel(this.value);
-    });  
-
-
+  let id_for_current_exp = "experience_value_"+index
 </script>
 
 {% endblock javascripts %}
