Added Skeleton Loder to the dashboard/home

--- a/hatcher_source/static/css/dashboard.css
+++ b/hatcher_source/static/css/dashboard.css
@@ -3,23 +3,24 @@ body{
     background: #c8c6ef36;
     
 }
-.navbar{
-    background-color: #706ce4 ;
+.navbar {
+    background-color: white;
     position: fixed;
     width: 100%;
     top: 0px;
     z-index: 5;
     padding: 0;
+    border-bottom: 1px solid #79554830;
 }
 .hatcher-logo {
-    height: 65px;
+    height: 51px;
     cursor: pointer;
 }
-.nav-item{
-    transition: 1s;
+.nav-item > a{
+    font-size: 18px !important;
 }
 .nav-item>a:hover{
-    color: white !important;
+    color: green !important;
 }
 .nav-item{
     margin: 0 5px;
@@ -111,4 +112,42 @@ body{
 
 .rotate-180deg{
     rotate: 180deg;
+}
+
+
+
+/* Skeleton Loader */
+
+.skeleton_1:empty {
+    position: relative;
+    height: 226px;
+    background-color: #ffffff;
+    border-radius: 26px 26px 26px 26px;
+}
+
+.skeleton_1:empty:before {
+    content: ' ';
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 226px;
+    background-image: linear-gradient(#d9dcde 20px, transparent 0), linear-gradient(#d9dcde 20px, transparent 0), linear-gradient(#d9dcde 20px, transparent 0), linear-gradient(#d9dcde 20px, transparent 0), linear-gradient(#d9dcde 20px, transparent 0), linear-gradient(#d9dcde 22px, transparent 0), linear-gradient(#d9dcde 22px, transparent 0), linear-gradient(#d9dcde 22px, transparent 0), linear-gradient(#d9dcde 22px, transparent 0), linear-gradient(#d9dcde 29px, transparent 0), linear-gradient(#d9dcde 40px, transparent 0);
+    background-repeat: repeat-y;
+    background-size: 149px 237px, 100px 237px, 100px 237px, 100px 237px, 100px 237px, 163px 237px, 22px 237px, 163px 237px, 22px 237px, 190px 237px, 40px 237px;
+    background-position: left 361px top 172px, left 341px top 142px, left 237px top 142px, left 131px top 142px, left 26px top 142px, left 58px top 110px, left 26px top 110px, left 57px top 78px, left 26px top 78px, left 74px top 34px, left 26px top 29px;
+    animation: shineForSkeleton_1 2s infinite;
+}
+
+@keyframes shineForSkeleton_1 {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
