--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hatcher</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link  href="/media/logos/hatcher_tab.png" rel="icon" type="image/png">
     {% block stylesheet %}
@@ -28,7 +28,7 @@
     
     {% block script %}
     {% endblock script %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script>
         document.getElementById('reload').addEventListener('click', function() {
           location.reload();
