--- a/hatcher_source/templates/blocks/dashboard_block.html
+++ b/hatcher_source/templates/blocks/dashboard_block.html
@@ -7,7 +7,7 @@
   <title>{% block title %} {% endblock title %}</title>
   {% block css %} {% endblock css %}
   {% load static %}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
@@ -54,16 +54,14 @@
           <a href="{% url 'community_post:post_list' %}"><button class="btn btn-primary">Community</button></a>
         </div> -->
 
-        <div style="width: 110px;" id="toggle_profile_box" class="d-flex flex-row align-items-center">
-          <img src="{{ user.user_profile_image.url }}"  alt="Profile Image" 
-          style="border-radius: 50%;
-          height: 50px;
-          width: 50px;
+        <div style="/* width: 110px; */border: 1px solid #e5d9d9;padding: 5px;border-radius: 34px;/* height: 50px; */margin-right: 59px;" id="toggle_profile_box" class="d-flex flex-row align-items-center">
+          <img src="/media/user_profile_image/WIN_20241115_16_28_17_Pro.jpg" alt="Profile Image" style="border-radius: 50%;
+          height: 35px;
+          width: 35px;
           object-fit: cover;
-          background: #857d7d3b;"
-        >
-          <svg class="profile_dropdown rotate-180deg"  xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
-            <path fill="white" d="M9.37 6.963L5.261 11.61a1.104 1.104 0 000 1.428.82.82 0 001.261 0l3.482-3.929 3.471 3.928a.82.82 0 001.262 0 1.104 1.104 0 000-1.427l-4.107-4.647c-.34-.395-.913-.395-1.262 0z">
+          background: #857d7d3b;">
+          <svg class="profile_dropdown rotate-180deg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" viewBox="0 0 20 20">
+            <path fill="black" d="M9.37 6.963L5.261 11.61a1.104 1.104 0 000 1.428.82.82 0 001.261 0l3.482-3.929 3.471 3.928a.82.82 0 001.262 0 1.104 1.104 0 000-1.427l-4.107-4.647c-.34-.395-.913-.395-1.262 0z">
             </path>
           </svg>
         </div>
@@ -203,7 +201,7 @@
       alt="page-up-button" />
   </a>
   <script src="{% static 'js/dashboard.js' %}"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
